Fix repo-check history GHA history on forks.
On a fork, the repo-check history action was using the state of master
on the fork repo instead of the main repo. This made repo-check fail if
the master branch was not up-to-date.

The goal is to have branches from forks reporting repo-check correctly
when a PR is created in the main repo. This is an attempt to acheive
that.

--- a/.github/workflows/repo-check.yml
+++ b/.github/workflows/repo-check.yml
@@ -105,6 +105,7 @@ jobs:
 
     - name: branch-history
       run: |
-        git fetch origin master:master
+        git remote add reference https://github.com/mfem/mfem.git
+        git fetch reference master:master
         git checkout -b gh-actions-branch-history
         ./config/githooks/pre-push --history
