--- a/.github/workflows/repo-check.yml
+++ b/.github/workflows/repo-check.yml
@@ -105,13 +105,9 @@ jobs:
 
     - name: branch-history
       run: |
-        git remote add reference https://github.com/mfem/mfem.git
-        git fetch reference master:master
+        # We override origin to make sure we point to the main repo.
+        # This is to have consistent test results on PRs from forks.
+        git remote remove origin
+        git remote add origin https://github.com/mfem/mfem.git
         git checkout -b gh-actions-branch-history
-        # Note: the script below will run `git fetch origin master:master.
-        # This may fail on forks because the forked master may be far behind.
-        # This is OK because we are sure to be up-to-date with the fetch from
-        # "reference" we do here.
-        # An alternative would be to change origin here, so that it points to
-        # the main repo (like reference).
         ./config/githooks/pre-push --history
