--- a/.github/workflows/repo-check.yml
+++ b/.github/workflows/repo-check.yml
@@ -71,7 +71,7 @@ jobs:
 
     - name: get astyle
       run: |
-        sudo apt-get install astyle=3.1
+        sudo apt-get install astyle=3.1-1ubuntu2
 
     - name: style check
       run: |
