--- a/.github/workflows/mfem-analysis.yml
+++ b/.github/workflows/mfem-analysis.yml
@@ -39,7 +39,7 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     # Name should depend on matrix parameters, but we want a 0D matrix here.
-    name: gitignore
+    name: toto
 
     steps:
     - name: Cancel Previous Runs
