--- a/.gitlab/corona-build-and-test.yml
+++ b/.gitlab/corona-build-and-test.yml
@@ -9,13 +9,16 @@
 # terms of the BSD-3 license. We welcome feedback and contributions, see file
 # CONTRIBUTING.md for details.
 
+variables:
+  MACHINE_NAME: corona
+
 stages:
   - setup
   - allocate_resource
   - build_and_test
-  - release_resource
+  - release_resource_and_report
 
-# Allocate
+# Slurm shared allocation
 c_allocate_resource:
   variables:
     GIT_STRATEGY: none
@@ -33,7 +36,7 @@ rocm_gcc_8.3.1:
   extends: .build_and_test_on_corona
   needs: [c_allocate_resource]
 
-# Release
+# Release slurm allocation
 c_release_resource:
   variables:
     GIT_STRATEGY: none
@@ -44,40 +47,22 @@ c_release_resource:
     - ([[ -n "${JOBID}" ]] && scancel ${JOBID})
   needs: [rocm_gcc_8.3.1]
 
-# Reports
+# Jobs report
 c_report_job_success:
   variables:
     GIT_STRATEGY: none
   extends: .on_corona
-  stage: release_resource
+  stage: release_resource_and_report
   script:
-    - echo "Can only run if all the corona jobs passed"
-    - cd ${AUTOTEST_ROOT}/autotest && git pull
-    - rundir="corona/$(date +%Y-%m-%d)-gitlab-ci-${CI_COMMIT_REF_SLUG}"
-    - rundir=$(.gitlab/scripts/safe_create_rundir $rundir)
-    - echo "The Corona jobs were successful" > ${rundir}/gitlab.out
-    - echo "See the pipeline here -> $CI_PIPELINE_URL" >> ${rundir}/gitlab.err
-    - git add ${rundir}
-    - git commit -am "Gitlab CI log for baseline on corona with intel ($(date +%Y-%m-%d))"
-    - git push origin master
-  needs: [rocm_gcc_8.3.1]
+    - .gitlab/scripts/report_build_and_test_success
 
 c_report_job_failure:
   variables:
     GIT_STRATEGY: none
   extends: .on_corona
-  stage: release_resource
+  stage: release_resource_and_report
   script:
-    - echo "Runs if there was at least one failure on corona"
-    - cd ${AUTOTEST_ROOT}/autotest && git pull
-    - rundir="corona/$(date +%Y-%m-%d)-gitlab-ci-${CI_COMMIT_REF_SLUG}"
-    - rundir=$(.gitlab/scripts/safe_create_rundir $rundir)
-    - echo "There was an error while running CI on Corona" > ${rundir}/gitlab.err
-    - cp ${rundir}/gitlab.err ${rundir}/autotest-email.html
-    - git add ${rundir}
-    - git commit -am "Gitlab CI log for baseline on corona with intel ($(date +%Y-%m-%d))"
-    - git push origin master
-  needs: [rocm_gcc_8.3.1]
+    - .gitlab/scripts/report_build_and_test_failure
 
 include:
   - local: .gitlab/configs/common.yml
