--- a/.gitlab/lassen-build-and-test.yml
+++ b/.gitlab/lassen-build-and-test.yml
@@ -9,14 +9,35 @@
 # terms of the BSD-3 license. We welcome feedback and contributions, see file
 # CONTRIBUTING.md for details.
 
+variables:
+  MACHINE_NAME: lassen
+
 stages:
   - setup
   - build_and_test
+  - report
 
 opt_mpi_cuda_xl_16_1_1_8:
   variables:
     SPEC: "%xl@16.1.1.8 +mpi +cuda cuda_arch=70"
   extends: .build_and_test_on_lassen
+
+# Jobs report
+l_report_job_success:
+  variables:
+    GIT_STRATEGY: none
+  extends: .on_lassen
+  stage: report
+  script:
+    - .gitlab/scripts/report_build_and_test_success
+
+l_report_job_failure:
+  variables:
+    GIT_STRATEGY: none
+  extends: .on_lassen
+  stage: report
+  script:
+    - .gitlab/scripts/report_build_and_test_failure
 
 include:
   - local: .gitlab/configs/common.yml
