--- a/.gitlab/quartz-baseline.yml
+++ b/.gitlab/quartz-baseline.yml
@@ -17,15 +17,13 @@ stages:
 
 baselinecheck_mfem_intel_quartz:
   extends: [.baselinecheck_mfem, .on_quartz]
-  needs: [setup_baseline]
 
 q_report_baseline:
   extends: [.on_quartz]
-  needs: [baselinecheck_mfem_intel_quartz]
   stage: baseline_report
   script:
     - cd ${AUTOTEST_ROOT}/autotest && git pull
-    - rundir="quartz/$(date +%Y-%m-%d)-gitlab-baseline-${CI_COMMIT_REF_SLUG}"
+    - rundir="${MACHINE_NAME}/$(date +%Y-%m-%d)-gitlab-baseline-${CI_COMMIT_REF_SLUG}"
     - rundir=$(.gitlab/scripts/safe_create_rundir $rundir)
     - cp ${CI_PROJECT_DIR}/${ARTIFACTS_DIR}/* ${rundir}
     # We create an autotest-email.html file, because that's how we signal that there was a diff (temporary).
@@ -36,12 +34,11 @@ q_report_baseline:
         cp ${rundir}/*.err ${rundir}/autotest-email.html
       fi
     - git add ${rundir}
-    - git commit -am "Gitlab CI log for baseline on quartz with intel ($(date +%Y-%m-%d))"
+    - git commit -am "Gitlab CI log for baseline on ${MACHINE_NAME} with intel ($(date +%Y-%m-%d))"
     - git push origin master
 
 baselinepublish_mfem_quartz:
   extends: [.on_quartz, .rebaseline_mfem]
-  needs: [baselinecheck_mfem_intel_quartz]
 
 include:
   - local: .gitlab/configs/common.yml
