Switch from "template" to "config"

--- a/.gitlab/configs/common.yml
+++ b/.gitlab/configs/common.yml
@@ -119,7 +119,7 @@ variables:
     false
   fi
 
-# Actual templates for baseline checks
+# Configurations for baseline checks
 .baselinecheck_mfem:
   stage: baseline_check
   variables:
