--- a/.gitlab/corona-build-and-test.yml
+++ b/.gitlab/corona-build-and-test.yml
@@ -41,7 +41,7 @@ c_release_resource:
   variables:
     GIT_STRATEGY: none
   extends: .on_corona
-  stage: release_resource
+  stage: release_resource_and_report
   script:
     - export JOBID=$(squeue -h --name=${ALLOC_NAME} --format=%A)
     - ([[ -n "${JOBID}" ]] && scancel ${JOBID})
@@ -49,16 +49,12 @@ c_release_resource:
 
 # Jobs report
 c_report_job_success:
-  variables:
-    GIT_STRATEGY: none
   extends: .on_corona
   stage: release_resource_and_report
   script:
     - .gitlab/scripts/report_build_and_test_success
 
 c_report_job_failure:
-  variables:
-    GIT_STRATEGY: none
   extends: .on_corona
   stage: release_resource_and_report
   script:
