--- a/.gitlab/quartz-build-and-test.yml
+++ b/.gitlab/quartz-build-and-test.yml
@@ -81,16 +81,12 @@ q_release_resource:
 
 # Jobs report
 q_report_job_success:
-  variables:
-    GIT_STRATEGY: none
   extends: .on_quartz
-  stage: release_resource
+  stage: release_resource_and_report
   script:
     - .gitlab/scripts/report_build_and_test_success
 
 q_report_job_failure:
-  variables:
-    GIT_STRATEGY: none
   extends: .on_quartz
   stage: release_resource
   script:
