--- a/.gitlab/quartz-build-and-test.yml
+++ b/.gitlab/quartz-build-and-test.yml
@@ -9,9 +9,6 @@
 # terms of the BSD-3 license. We welcome feedback and contributions, see file
 # CONTRIBUTING.md for details.
 
-variables:
-  MACHINE_NAME: quartz
-
 stages:
   - setup
   - allocate_resource
@@ -88,7 +85,7 @@ q_report_job_success:
 
 q_report_job_failure:
   extends: .on_quartz
-  stage: release_resource
+  stage: release_resource_and_report
   script:
     - .gitlab/scripts/report_build_and_test_failure
 
