--- a/.gitlab/lassen-baseline.yml
+++ b/.gitlab/lassen-baseline.yml
@@ -16,6 +16,10 @@ stages:
   - baseline_publish
 
 baselinecheck_mfem_intel_lassen:
+  before_script:
+    - module load xl/2020.11.12-cuda-11.1.1
+    - module load cuda/11.1.1
+    - module load lapack/3.9.0-xl-2020.11.12
   extends: [.baselinecheck_mfem, .on_lassen]
 
 l_report_baseline:
