--- a/.gitlab/configs/corona-config.yml
+++ b/.gitlab/configs/corona-config.yml
@@ -43,6 +43,8 @@ variables:
 # Spack helped builds
 # Generic corona build job, extending build script
 .build_and_test_on_corona:
-  extends: [.build_toss_3_x86_64_ib_corona_script, .on_corona]
+  extends: [.on_corona]
   stage: build_and_test
+  script:
+    - srun -p mi60 -t 15 -N 1 tests/gitlab/build_and_test --spec "${SPEC}" --build-root "${BUILD_ROOT}" --data
 
