--- a/.gitlab/configs/lassen-config.yml
+++ b/.gitlab/configs/lassen-config.yml
@@ -31,10 +31,13 @@ variables:
       when: on_failure
     - when: on_success
 
-# Spack helped builds
-# Generic lassen build job, extending build script
-# Note: Lassen jobs can start as soon as the setup job is complete.
+# Lassen uses a different job scheduler (spectrum lsf) that does not allow
+# pre-allocation the same way slurm does.  We use pdebug queue on lassen
+# to speed-up the allocation.  However this would not be scalable to
+# multiple builds.
 .build_and_test_on_lassen:
-  extends: [.build_blueos_3_ppc64le_ib_script, .on_lassen]
+  extends: [.on_lassen]
   stage: build_and_test
+  script:
+    - lalloc 1 -W 30 -q pdebug tests/gitlab/build_and_test --spec "${SPEC}" --build-root "${BUILD_ROOT}" --data
   needs: [setup]
