--- a/.gitlab/lassen-build-and-test.yml
+++ b/.gitlab/lassen-build-and-test.yml
@@ -20,13 +20,13 @@ opt_mpi_cuda_xl_16_1_1_8:
   extends: .build_and_test_on_lassen
 
 # Jobs report
-l_report_job_success:
+report_job_success:
   extends: .on_lassen
   stage: report
   script:
     - .gitlab/scripts/report_build_and_test_success
 
-l_report_job_failure:
+report_job_failure:
   extends: .on_lassen
   stage: report
   script:
