--- a/.gitlab/quartz-build-and-test.yml
+++ b/.gitlab/quartz-build-and-test.yml
@@ -16,7 +16,7 @@ stages:
   - release_resource_and_report
 
 # Allocate
-q_allocate_resource:
+allocate_resource:
   variables:
     GIT_STRATEGY: none
   extends: .on_quartz
@@ -67,7 +67,7 @@ opt_par_gcc_6_1_0_pumi:
   extends: .build_and_test_on_quartz
 
 # Release
-q_release_resource:
+release_resource:
   variables:
     GIT_STRATEGY: none
   extends: .on_quartz
@@ -77,13 +77,13 @@ q_release_resource:
     - ([[ -n "${JOBID}" ]] && scancel ${JOBID})
 
 # Jobs report
-q_report_job_success:
+report_job_success:
   extends: .on_quartz
   stage: release_resource_and_report
   script:
     - .gitlab/scripts/report_build_and_test_success
 
-q_report_job_failure:
+report_job_failure:
   extends: .on_quartz
   stage: release_resource_and_report
   script:
