--- a/.gitlab/configs/setup-baseline.yml
+++ b/.gitlab/configs/setup-baseline.yml
@@ -9,13 +9,18 @@
 # terms of the BSD-3 license. We welcome feedback and contributions, see file
 # CONTRIBUTING.md for details.
 
-# The setup_baseline job in setup stage_baseline doesn't rely on MFEM git repo.
-# It prepares a pipeline-wide working directory downloading/updating external
-# repos. TODO: updating tests and tpls is not necessary anymore since pipelines
-# are now using unique directories so repo are never shared with another
-# pipeline. This is not memory efficient (we keep a lot of data), hence this
-# reminder.
-# Note: This job can start immediately.
+# TPLS_DIR is used in .gitlab/scripts/baseline to provide the tpls location
+# when call the runtest script in MFEM test repo.
+# Note: the value must be consistent with what setup_baseline does.
+variables:
+  TPLS_DIR: ${BUILD_ROOT}/tpls
+
+# The setup_baseline job doesn't rely on MFEM git repo. It prepares a
+# pipeline-wide working directory downloading/updating external repos.
+# TODO:
+# updating tests and tpls is not necessary anymore since pipelines are now
+# using unique directories so repo are never shared with another pipeline. This
+# is not memory efficient (we keep a lot of data), hence this reminder.
 setup_baseline:
   tags:
     - shell
