Initial linear form extension

--- a/fem/CMakeLists.txt
+++ b/fem/CMakeLists.txt
@@ -59,7 +59,9 @@ set(SRCS
   ceed/operator.cpp
   ceed/util.cpp
   linearform.cpp
+  linearform_ext.cpp
   lininteg.cpp
+  lininteg_domain.cpp
   multigrid.cpp
   nonlinearform.cpp
   nonlinearform_ext.cpp
@@ -143,6 +145,7 @@ set(HDRS
   ceed/operator.hpp
   ceed/util.hpp
   linearform.hpp
+  linearform_ext.hpp
   lininteg.hpp
   multigrid.hpp
   nonlinearform.hpp
