Propagate AUTOTEST value to sub-pipelines _AUTOTEST

--- a/.gitlab/configs/common.yml
+++ b/.gitlab/configs/common.yml
@@ -30,8 +30,8 @@ variables:
 # Defines the default choice for updating the saved baseline results. By default
 # the baseline can only be updated from the master branch. This variable offers
 # the option to manually ask for rebaselining from another branch if necessary.
-  REBASELINE: "NO"
-#  AUTOTEST: "NO"
+  _REBASELINE: "NO"
+  _AUTOTEST: "NO"
 
 # Git repositories used in the pipeline
   TPLS_REPO: ssh://git@mybitbucket.llnl.gov:7999/mfem/tpls.git
