--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,24 +30,32 @@ stages:
 # Trigger subpipelines:
 quartz-build-and-test:
   stage: sub-pipelines
+  variables:
+    _AUTOTEST: $AUTOTEST
   trigger:
     include: .gitlab/quartz-build-and-test.yml
     strategy: depend
 
 quartz-baseline:
   stage: sub-pipelines
+  variables:
+    _AUTOTEST: $AUTOTEST
   trigger:
     include: .gitlab/quartz-baseline.yml
     strategy: depend
 
 lassen-build-and-test:
   stage: sub-pipelines
+  variables:
+    _AUTOTEST: $AUTOTEST
   trigger:
     include: .gitlab/lassen-build-and-test.yml
     strategy: depend
 
 corona-build-and-test:
   stage: sub-pipelines
+  variables:
+    _AUTOTEST: $AUTOTEST
   trigger:
     include: .gitlab/corona-build-and-test.yml
     strategy: depend
