--- a/.gitlab/configs/corona-config.yml
+++ b/.gitlab/configs/corona-config.yml
@@ -26,13 +26,13 @@ variables:
     - if: '$CI_COMMIT_BRANCH =~ /_cnone/ || $ON_CORONA != "ON"'
       when: never
     # Don’t run autotest update if...
-    - if: '$CI_JOB_NAME =~ /report/ && $AUTOTEST != "YES"'
+    - if: '$CI_JOB_NAME =~ /report/ && $_AUTOTEST != "YES"'
       when: never
     # Report success on success status
-    - if: '$CI_JOB_NAME =~ /report_job_success/ && $AUTOTEST == "YES"'
+    - if: '$CI_JOB_NAME =~ /report_job_success/ && $_AUTOTEST == "YES"'
       when: on_success
     # Report failure on failure status
-    - if: '$CI_JOB_NAME =~ /report_job_failure/ && $AUTOTEST == "YES"'
+    - if: '$CI_JOB_NAME =~ /report_job_failure/ && $_AUTOTEST == "YES"'
       when: on_failure
     # Always release resource
     - if: '$CI_JOB_NAME =~ /release_resource/'
