--- a/.gitlab/configs/setup-baseline.yml
+++ b/.gitlab/configs/setup-baseline.yml
@@ -34,8 +34,8 @@ setup_baseline:
     - mkdir -p ${BUILD_ROOT} && cd ${BUILD_ROOT}
     - if [ ! -d "tpls" ]; then git clone ${TPLS_REPO}; fi
     - if [ ! -d "tests" ]; then git clone ${TESTS_REPO}; fi
-    - cd tpls && git pull && cd ..
-    - cd tests && git pull origin && cd ..
+    - cd tpls && git pull origin add-baseline-gpu && git checkout add-baseline-gpu && cd ..
+    - cd tests && git pull origin add-baseline-gpu && git checkout add-baseline-gpu && cd ..
     - echo "AUTOTEST_ROOT ${AUTOTEST_ROOT}"
     - mkdir -p ${AUTOTEST_ROOT} && cd ${AUTOTEST_ROOT}
     - if [ ! -d "autotest" ]; then git clone ${AUTOTEST_REPO}; fi
