--- a/.gitlab/configs/setup-baseline.yml
+++ b/.gitlab/configs/setup-baseline.yml
@@ -37,6 +37,6 @@ setup_baseline:
     - cd tpls && git pull && cd ..
     - cd tests && git pull origin && cd ..
     - echo "AUTOTEST_ROOT ${AUTOTEST_ROOT}"
-    - cd ${AUTOTEST_ROOT}
+    - mkdir -p ${AUTOTEST_ROOT} && cd ${AUTOTEST_ROOT}
     - if [ ! -d "autotest" ]; then git clone ${AUTOTEST_REPO}; fi
     - cd autotest && git pull && cd ..
