--- a/.gitlab/corona-baseline.yml
+++ b/.gitlab/corona-baseline.yml
@@ -34,6 +34,7 @@ report_baseline:
   stage: baseline_report
   script:
     - cd ${AUTOTEST_ROOT}/autotest && git pull
+    - mkdir -p ${MACHINE_NAME}
     - rundir="${MACHINE_NAME}/$(date +%Y-%m-%d)-gitlab-${BASELINE_TEST}-${CI_COMMIT_REF_SLUG}"
     - rundir=$(${CI_PROJECT_DIR}/.gitlab/scripts/safe_create_rundir ${rundir})
     - cp ${CI_PROJECT_DIR}/${ARTIFACTS_DIR}/* ${rundir}
@@ -45,9 +46,10 @@ report_baseline:
         cp ${rundir}/*.err ${rundir}/autotest-email.html
       fi
     - git add ${rundir}
-    - git commit -am "Gitlab CI log for baseline on ${MACHINE_NAME} with intel ($(date +%Y-%m-%d))"
+    - git commit -am "GitLab CI log for ${BASELINE_TEST} on ${MACHINE_NAME} with intel ($(date +%Y-%m-%d))"
     - git push origin master
 
+# This job can only be manually triggered on a pipeline for master branch, or if the pipeline was triggered with REBASELINE="YES"
 baselinepublish_mfem_corona:
   extends: [.on_corona]
   stage: baseline_publish
