--- a/.gitlab/quartz-build-and-test.yml
+++ b/.gitlab/quartz-build-and-test.yml
@@ -15,7 +15,7 @@ stages:
   - build_and_test
   - release_resource_and_report
 
-# Allocate
+# Slurm shared allocation
 allocate_resource:
   variables:
     GIT_STRATEGY: none
@@ -66,7 +66,7 @@ opt_par_gcc_6_1_0_pumi:
     SPEC: "%gcc@6.1.0 +pumi"
   extends: .build_and_test_on_quartz
 
-# Release
+# Release slurm allocation
 release_resource:
   variables:
     GIT_STRATEGY: none
