--- a/fem/CMakeLists.txt
+++ b/fem/CMakeLists.txt
@@ -71,7 +71,9 @@ set(SRCS
   linearform_ext.cpp
   lininteg.cpp
   lininteg_domain.cpp
+  lininteg_domain_grad.cpp
   lininteg_vector_domain.cpp
+  lininteg_vector_domain_grad.cpp
   multigrid.cpp
   nonlinearform.cpp
   nonlinearform_ext.cpp
